--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-select-dropdown": "^1.8.0",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "react-navigation/stack"
   },
