--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-select-dropdown": "^1.8.0",
     "react-native-web": "0.17.1",
-    "react-navigation-stack": "react-navigation/stack"
+    "react-navigation-stack": "react-navigation/stack",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
